# tgBot

./: .gitignore  CMakeLists.txt
include/: CommandsStorage.hpp  MyBot.hpp
src/: CommandStorage.cpp  MyBot.cpp  main.cpp
